# Fraction-Lib

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  codeql.yml
lib/: CMakeLists.txt
src/: CMakeLists.txt  Fraction.h
test/: CMakeLists.txt  FractionTests.cpp
